sort.pancake.lessons.sort.pancake.BasicPancake.scala.error
BasicPancake:3: error: not found: type In
var tmt:In=getRayonCrepe(0)
        ^BasicPancake:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def selectcible() {for (i<-1 to (t-estT)) {if (tmt<getRayonCrepe(i)) {n=i; tmt=getRayonCrepe(i)}};return n}
                                                                                                         ^BasicPancake:7: warning: enclosing method selectcible has result type Unit: return value discarded
def selectcible() {for (i<-1 to (t-estT)) {if (tmt<getRayonCrepe(i)) {n=i; tmt=getRayonCrepe(i)}};return n}
                                                                                                  ^BasicPancake:8: error: type mismatch;
 found   : Unit
 required: Int
def solve() {while (!estTriee) {tmt=getRayonCrepe(0); ct=selectcible(); retourne(ct);retourne(t-estT);estT=estT+1}} 
                                                                    ^